# rust-pager

./: .gitignore  COPYING  Cargo.toml  README.md  default.nix  result  shell.nix
nix/: sources.json
src/: main.rs  reader.rs  shared.rs  writer.rs
