[package]
name = "rust-pager"
description = "Yet another pager in Rust"
homepage = "https://github.com/Riey/rust-pager"
repository = "https://github.com/Riey/rust-pager"
documentation = "https://docs.rs/rust-pager"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
categories = ["command-line-interface"]
keywords = [
    "cli",
    "pager",
]
readme = "README.md"
exclude = [".vscode"]

[[bin]]
name = "rp"
path = "src/main.rs"

[features]
logging = ["simplelog", "log"]

[dependencies]
ahash = "0.7.2"
bumpalo = "3.6.1"
crossbeam-queue = "0.3.1"
crossbeam-utils = "0.8.3"
crossterm = "0.19.0"
ctrlc = { version = "3.1.8", features = ["termination"] }
libc = "0.2.91"
memchr = "2.3.4"
pico-args = "0.4.0"
rayon = "1.5.0"
smallvec = "1.6.1"
twoway = "0.2.1"
log = { version = "0.4.14", optional = true }
simplelog = { version = "0.9.0", optional = true }

[profile.release]
lto = true
